Placeholders to avoid page jump during reload.

--- a/htdocs/components/85_spreadsheet_table.css
+++ b/htdocs/components/85_spreadsheet_table.css
@@ -121,6 +121,8 @@ tr.row-sub td:first-child { text-indent:24px; }
 .new_table table    { table-layout: fixed;  width: 100%; border-spacing: 0; }
 .new_table th { cursor: pointer; padding: 2px 20px 2px 4px; background-color: [[NEUTRAL_BORDER]]; line-height: 16px; }
 .new_table tbody tr:nth-child(odd) { background-color: #eee; }
+.new_table tbody tr:nth-child(even) { background-color: #fff; }
+.new_table .subtable { background: #f8f8f0;  }
 .new_table th,.new_table td { padding: 4px; word-wrap: break-word; }
 
 .new_table_wrapper { clear: both; margin: 0 0 16px; }
